Correct spacing around yes/no radio buttons in the block configuration pages.

--- a/themes/clouds/style.css
+++ b/themes/clouds/style.css
@@ -1042,6 +1042,9 @@ padding-left: 3px;
 padding-right: 3px;
 }
 
+.optionbox > input { margin-left: 5px;} 
+html[dir="rtl"] .optionbox > input { margin-right: 5px;} 
+
 select {
 border:1px solid #ccc;
 font-family: tahoma, arial, helvetica, sans-serif;
